feat: Better explanation for task 1

--- a/courses/an20/exercises/ex07.tex
+++ b/courses/an20/exercises/ex07.tex
@@ -96,9 +96,9 @@ Abbildungsmatrix bezüglich der Standardbasen.
 \[
   \norm{x}_1 = \sum_{k = 1}^N \abs{x_k}, \quad \norm{y}_1 = \sum_{j = 1}^M \abs{y_j}
 \]
-Wir betrachten zunächst
+Wir betrachten zunächst die Multiplikation von $A$ mit dem \colorbox{yellow}{$k$-ten Einheitsvektor}.
 \[
-  A \cdot e^k =
+  A \cdot \colorbox{yellow}{$e^k$} =
   \qty(
     \begin{array}{ccccc}
       a_{11} & \ldots & a_{1k} & \ldots & a_{1N} \\ \\ \\
