feat: Hausaufgabe -> Aufgabe

--- a/courses/an20/exercises/ex07.tex
+++ b/courses/an20/exercises/ex07.tex
@@ -144,7 +144,7 @@ $x = \sum_{k = 1}^N x_k e_k$
 \end{align*}
 $\norm{A} = \max_{k = 1 \ldots N} \sum_{j = 1}^M \abs{a_{jk}}$ (die Spaltensummennorm)
 
-\paragraph{Hausaufgabe 2} Seien $X, Y, Z$ normierte Räume und
+\paragraph{Aufgabe 2} Seien $X, Y, Z$ normierte Räume und
 $T \in \mathcal{L}\qty(X, Y)$ sowie $S \in \mathcal{L}\qty(Y, Z)$.
 Dann gehört $S \circ T$ zu $\mathcal{L}\qty(X, Z)$.
 Zeigen Sie folgende Ungleichung
@@ -167,7 +167,7 @@ Für $x \in X$ gilt
   &\leq \norm{S} \cdot \norm{T}
 \end{align*}
 
-\paragraph{Hausaufgabe 3} $X = C([0, 1])$ sei mit der Supremumsnorm versehen.
+\paragraph{Aufgabe 3} $X = C([0, 1])$ sei mit der Supremumsnorm versehen.
 Wir betrachten die Abbildungen $S, T \colon C([0, 1]) \to \mathbb{R}$,
 definiert durch
 \[
