--- a/courses/an20/homework/ha07.tex
+++ b/courses/an20/homework/ha07.tex
@@ -109,12 +109,12 @@
   $\det \colon \mathbb{R}^{N \times N} \to \mathbb{R}$.
   Für alle invertierbaren Matizen $A \in \mathbb{R}^{N \times N}$
   gilt $\det A \ne 0$.
-  Nun findet existiert für jedes $x \in \mathbb{R} \setminus \qty{0}$
+  Nun existiert für jedes $x \in \mathbb{R} \setminus \qty{0}$
   eine Matrix $A \in \mathbb{R}^{N \times N}$ mit
   $\det A = X$.
   Die Menge $\mathbb{R} \setminus \qty{0}$ ist offen und aus
   Proposition 6.3.3 der Vorlesung
-  (``“Stetige Urbilder offener Mengen sind offen'')
+  (``Stetige Urbilder offener Mengen sind offen'')
   folgt, dass die Menge der invertierbaren Matrizen in
   $\mathbb{R}^{N \times N}w$ offen ist.
 \end{enumerate}
