--- a/courses/an20/homework/ha07.tex
+++ b/courses/an20/homework/ha07.tex
@@ -156,8 +156,8 @@ $T$ und $S$ überein.
 
 \subparagraph{Lsg.} $f(x) + Th + r_1(h) = f(x) + Sh + r_2(h)$
 \begin{align*}
-  \Rightarrow \norm{T - S} &= \frac{\norm{r_2(h) - r_1(h)}}{\norm{h}} = - \frac{\norm{r_1(h) + r_2(h)}}{\norm{h}}
-                             \leq -\frac{\norm{r_1(h)}}{\norm{h}} + \frac{\norm{r_2(h)}}{\norm{h}} \\
+  \Rightarrow \norm{T - S} &= \frac{\norm{r_2(h) - r_1(h)}}{\norm{h}} = \frac{\norm{r_1(h) + r_2(h)}}{\norm{h}}
+                             \leq \frac{\norm{r_1(h)}}{\norm{h}} + \frac{\norm{r_2(h)}}{\norm{h}} \\
   \overset{h \to 0}&= 0 \\
   \Rightarrow T - S = 0 &\Rightarrow T = S
 \end{align*}
