--- a/courses/an20/homework/ha07.tex
+++ b/courses/an20/homework/ha07.tex
@@ -111,7 +111,7 @@
   gilt $\det A \ne 0$.
   Nun existiert für jedes $x \in \mathbb{R} \setminus \qty{0}$
   eine Matrix $A \in \mathbb{R}^{N \times N}$ mit
-  $\det A = X$.
+  $\det A = x$.
   Die Menge $\mathbb{R} \setminus \qty{0}$ ist offen und aus
   Proposition 6.3.3 der Vorlesung
   (``Stetige Urbilder offener Mengen sind offen'')
