--- a/courses/an20/exercises/ex08.tex
+++ b/courses/an20/exercises/ex08.tex
@@ -260,7 +260,7 @@ Normalenvektor ist $n = \pm \qty(\nabla f\qty(x_0))$.
  \newpage
 \item Geben Sie die Richtungsableitung von $f$ im Punkt $(1, -1)$ in Richtung
   $v \coloneqq \frac{\nabla f(1, -1)}{\norm{\nabla f(1, -1)}_2}$ an.
-  \subparagraph{Lsg.} Allgemein: Fall $f$ in $x_0$ differenzierbar ist, gilt
+  \subparagraph{Lsg.} Allgemein: Falls $f$ in $x_0$ differenzierbar ist, gilt
   $\frac{df}{dv} (x_0) = \skalprod{\nabla f\qty(x_0), v} = \nabla f\qty(x_0)^T v \forall v \in \mathbb{R}^N$.
   \[
     v = \frac{\nabla f(1, -1)}{\norm{\nabla f(1, -1)}_2}
